State and function in React

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.blank{
+  color: brown;
+}
+
+.contain{
+  color:purple;
+}
+
+.test{
+  color: aqua;
+}
